# figmatoDAG_automation

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  next.config.ts  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/browser/: agent.py  constants.py  main.py  markPage.js  router.py  schema.py  utils.py
backend/app/browser/graph/: graph.py  state.py  utils.py
backend/app/browser/service/: agent.py  mark_page.py  prompt.py  s3_client.py  utils.py
backend/app/browser/tools/: click.py  click_anywhere.py  go_back.py  hover.py  navigation.py  scroll.py  select_text.py  type.py  wait.py
backend/app/config/: config.py
src/app/: layout.tsx  page.tsx
src/app/api/images/[slug]/: route.ts
src/app/store/: actionStore.tsx  basicAuthProvider.tsx  graphStore.tsx
src/components/: automatedWorkflow.tsx  browser.tsx  debugPanel.tsx  debugView.tsx  feedbackView.tsx  graph.tsx  graphDrawer.tsx  imageViewer.tsx  manualWorkflow.tsx  state.tsx  summaryView.tsx
src/components/figma/: figmaCredentialsCard.tsx  figmaFlow.tsx
src/hooks/: useBrowserAutomation.ts  useGraphEdges.tsx  useGraphNodes.tsx
src/lib/: automation.tsx  constants.ts  floodFill.ts  graph.ts  imageProcessing.ts  s3.ts  utils.ts
src/lib/actions/: ai.ts  browser.ts  figma.ts
src/lib/actions/browser/: figmaTesting.ts  index.ts  webApp.ts
